[package]
name = "monotree"
version = "0.1.0"
authors = ["Francis <thyeem@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7.3"
hex = "0.4.1"
num = "0.2.1"
hashbrown = "0.7"
blake2-rfc = "0.2.18"
blake3 = "0.2.2"
digest = "0.8.1"
sha2 = "0.8.1"
sha3 = "0.8.2"
rocksdb = "0.13.0"
sled = "0.31.0"
scopeguard = "1.1.0"
paste = "0.1.7"
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false